--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 @import "tailwindcss";
-@import "tw-animate-css";
+/* @import "tw-animate-css"; */
 
 @custom-variant dark (&:is(.dark *));
 
@@ -67,7 +67,9 @@ body {
   min-width: 320px;
   min-height: 100vh; */
   margin: 0;
+  padding: 0; 
   min-height: 100vh;
+  
 }
 
 h1 {
