--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
 }
-
+/* 
 a {
   font-weight: 500;
   color: #646cff;
@@ -58,7 +58,7 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   /* margin: 0;
@@ -71,7 +71,10 @@ body {
   min-height: 100vh;
   
 }
-
+.custom-title-textarea {
+  font-size: 40px; 
+  line-height: 1.2;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -98,7 +101,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #d5e3f0;
+    color: #000000;
     background-color: #ffffff;
   }
   a:hover {
@@ -182,10 +185,10 @@ button:focus-visible {
 }
 
 @layer base {
-  * {
+  /* * {
     @apply border-border outline-ring/50;
-  }
-  body {
+  } */
+  /* body {
     @apply bg-background text-foreground;
-  }
+  } */
 }
