--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
-
 @import "tailwindcss";
-/* @import "tw-animate-css"; */
 
-@custom-variant dark (&:is(.dark *));
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -50,31 +47,21 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
 }
-/* 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
 
 body {
-  /* margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh; */
   margin: 0;
   padding: 0; 
   min-height: 100vh;
-  
+  direction: ltr !important;
+  unicode-bidi: normal !important;
+  text-align: left !important;
 }
+
 .custom-title-textarea {
   font-size: 40px; 
   line-height: 1.2;
 }
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -191,4 +178,37 @@ button:focus-visible {
   /* body {
     @apply bg-background text-foreground;
   } */
+}
+
+.lexical-editor-wrapper, .lexical-editor-wrapper * {
+  direction: ltr !important;
+  unicode-bidi: normal !important;
+  text-align: left !important;
+}
+
+.editor-root, .editor-root * {
+  direction: ltr !important;
+  unicode-bidi: normal !important;
+  text-align: left !important;
+}
+
+.editor-input, .editor-input * {
+  direction: ltr !important;
+  unicode-bidi: normal !important;
+  text-align: left !important;
+}
+
+.ltr {
+  direction: ltr !important;
+  unicode-bidi: normal !important;
+  text-align: left !important;
+}
+
+.lexical-editor-wrapper {
+  position: relative;
+}
+
+.editor-input {
+  position: relative !important;
+  z-index: 1 !important;
 }
